# FamilyCart

./: .env.example  .env.monitoring  .env.runners  .env.uat  .env.uat.example  .gitignore  AUTH_FIX.md  CICD_TEST.md  CI_CD_ANALYSIS.md  CI_DEBUG_TEST.md  CI_RUNNER_FIX_VERIFICATION.md  CI_RUNNER_TEST.md  CLOUDFLARE_MONITORING_SETUP.md  DEPLOY_SELF_HOSTED_UAT.md  DOCKER_COMPOSE_V2_REFERENCE.md  DOCKER_DEV_GUIDE.md  DOCKER_IMPLEMENTATION_SUMMARY.md  DOCKER_NAMING_CONVENTION.md  GITHUB_AUTHORIZATION_SETUP.md  GITHUB_RUNNERS_VERSIONS_UPDATE.md  GITHUB_TOKEN_STEPS.md  PLANNING.md  POST_CONFIGURATION_TEST_RESULTS.md  PRODUCTION_DEPLOYMENT_RISK_ANALYSIS.md  PRODUCTION_READY_SUMMARY.md  PR_DESCRIPTION.md  QUANTITY_UNITS_IMPLEMENTATION.md  QUICK_DEPLOYMENT_GUIDE.md  README.md  RENAME_FIX_SUMMARY.md  RUNNER_FIXES_TEST.md  SECURITY_VULNERABILITIES_ANALYSIS.md  SPRINT_7_IMPLEMENTATION_SUMMARY.md  TASKS.md  UAT_MONITORING_SUMMARY.md  UAT_VS_DEVELOP_COMPARISON.md  USER_STORIES.md  WEEK_1_WORKFLOW_SETUP_SUMMARY.md  WORKFLOW_TEST_RESULTS.md  alembic.ini  (+17 more)
.github/: BRANCH_PROTECTION_SETUP.md  copilot-instructions.md
alembic/: env.py
backend/: .dockerignore  .env.example  .gitignore  CZECH_CATEGORIZATION_ANALYSIS.md  CZECH_CATEGORIZATION_FIX_SUMMARY.md  Dockerfile  EMAIL_SERVICE_README.md  GEMINI_MODEL_UPDATE_REPORT.md  README.md  ai_benchmark_results_20250703_081259.json  ai_benchmark_results_20250703_082138.json  alembic.ini  analyze_ollama_benchmark.py  benchmark_ai_providers.py  benchmark_all_ollama_models.py  benchmark_config.py  category_migration.py  create_share_test_user.py  create_test_users.py  debug_500.py  debug_cache_behavior.py  debug_czech_categorization.py  debug_redis_config.py  debug_redis_deep.py  debug_share_endpoint.py  focused_benchmark.py  ollama_models_benchmark_20250703_112132.json  pyproject.toml  pyproject.toml.bak  simple_ai_test.py  test_ai_optimized.py  test_ai_performance.py  test_ai_providers.py  test_ai_providers_simple.py  test_all_templates.py  test_api_fix.py  test_brevo_email.py  test_categorization_api.py  test_category_sorting.py  test_complete_fix_verification.py  (+52 more)
backend/alembic/: env.py
backend/alembic/versions/: 0a2113921588_fix_unit_relationship_foreign_key.py  0a3a8c5bc835_make_nickname_mandatory_for_new_users.py  1aa3bd94a6b5_add_standardized_name_and_translations_.py  2ebcd4b137e2_add_icon_name_and_translations_to_.py  3f5e49c141c0_rename_description_to_comment_in_item_.py  4945d2a0eb2d_create_foreign_key_constraint_manual.py  4fb56a654813_add_icon_name_and_translations_to_.py  6000f99ab353_convert_datetime_columns_to_timezone_.py  687785059f62_add_last_modified_by_to_item.py  6d724cac3283_initial_migration.py  795e7e423f03_add_foreign_key_constraint_to_quantity_.py  7f96d9c28e64_add_nickname_column_to_user_table.py  b9398919b7f1_final_model_updates_for_icon_and_.py  d7b15d135da2_update_timezone_aware_datetime_functions.py  ef912aabcc42_add_structured_quantity_and_unit_table.py
backend/app/: main.py
backend/app/api/: auth_logging.py  cors.py  deps.py  middleware.py
backend/app/api/v1/endpoints/: ai.py  auth.py  categories.py  item_ai_service.py  items.py  response_builders.py  shopping_lists.py  shopping_lists_no_slash.py  users.py  users_custom.py  websocket_helpers.py
backend/app/api/v1/helpers/: shopping_list_helpers.py
backend/app/api/v1/services/: shopping_list_services.py
backend/app/api/v1/ws/: notifications.py
backend/app/core/: auth.py  cache.py  config.py  dependencies.py  fastapi_users.py  users.py
backend/app/crud/: __init__.py  base.py  crud_category.py  crud_item.py  crud_shopping_list.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  category.py  item.py  shopping_list.py  unit.py  user.py
backend/app/schemas/: __init__.py  category.py  item.py  share.py  shopping_list.py  user.py
backend/app/services/: ai_factory.py  ai_provider.py  ai_service.py  ai_service_original.py  email_service.py  fallback_ai_service.py  gemini_provider.py  notification_service.py  ollama_provider.py  websocket_service.py
backend/app/templates/email/: base.html  invitation_existing_user.html  invitation_new_user.html  password_reset.html  verification.html
backend/app/tests/: __init__.py  conftest.py  test_ai_providers.py  test_ai_service.py  test_audit_logging.py  test_category_sorting.py  test_item_completion.py  test_item_completion_simple.py  test_item_schemas.py  test_shopping_lists.py  test_sprint5_endpoints.py  test_sprint5_item_permissions.py  test_sprint5_notifications.py  test_sprint5_permissions.py  test_sprint5_sharing.py  test_sprint5_sharing_fixed.py  test_sprint5_simple.py
backend/app/utils/: __init__.py  timezone.py
backend/scripts/: create_dev_users.py  init-test-db.sql  init_db.py  quick_test.py  seed_categories.py  start.sh  verify_production_ready.py
backend/tests/: check_trailing_slash.py  debug_auth_headers.py  debug_auth_token.py  debug_shopping_lists.py  debug_shopping_lists_auth.py  debug_shopping_lists_enhanced.py  debug_trailing_slash_auth.py  test_auth_flow.py  test_auth_simple.py  test_websocket.py  test_websocket_integration.py
config/: README.md  redis-dev.conf
deploy/: .gitignore  CLOUDFLARE_MULTI_SERVICE_GUIDE.md  MODULAR_NGINX_GUIDE.md  README.md  UAT_DEPLOYMENT_STRATEGY.md  create-uat-nginx-config.sh  deploy-github-runners.sh  deploy-modular-nginx.sh  deploy-multi-service-nginx.sh  install-cloudflare-certs.sh  nginx-site-manager.sh  setup-ssl-certificates.sh  test-nginx-config.sh
docs/: CLEANUP_SUMMARY.md  COLOR_PALETTE_IMPLEMENTATION.md  DASHBOARD_LOGO_WHITE_BORDER_FIX.md  DELETION_CONFIRMATION.md  EMAIL_SERVICE_IMPLEMENTATION_PLAN.md  EMAIL_SERVICE_IMPLEMENTATION_STATUS.md  FAVICON_GENERATION_GUIDE.md  FAVICON_PROCESSING.md  LOGO_CONCEPTS.md  LOGO_OPTIMIZATION.md  NEXT_JS_BUILD_FIX.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  REPO_CLEANUP_ANALYSIS.md  VISUAL_IDENTITY_LOGIN_DIALOGS.md  ai-caching-analysis.md  ai-provider-benchmark-report.md  fastapi-modernization-summary.md  final-ai-benchmark-report.md  icon-system-architecture.md  llm-optimization-report.md  (+6 more)
(+274 files in other folders)
