# backend/pyproject.toml

[tool.poetry]
name = "familycart-backend"
version = "0.1.0"
description = "Backend for the FamilyCart application"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app", from = "."}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.14"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9" # For synchronous Alembic operations if needed, or use asyncpg for async
asyncpg = "^0.29.0" # For FastAPI async database operations
pydantic = {extras = ["email"], version = "^2.7.1"}
pydantic-settings = "^2.2.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9" # For FastAPI file uploads, if needed
tenacity = "^8.2.3" # For retry mechanisms, e.g. DB connection
# For WebSocket support
websockets = "^12.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
python-dotenv = "^1.0.1"
openai = "^1.30.1"
google-generativeai = "^0.5.4"
redis = {extras = ["hiredis"], version = "^5.0.4"}
pytest = "^8.4.1"
ollama = "^0.5.1"
httpx = "^0.28.1"
requests = "^2.32.4"
aiohttp = "^3.12.13"
prometheus-client = "^0.19.0"
prometheus-fastapi-instrumentator = "^7.0.0"
psutil = "^6.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^0.23.8"
black = "^24.10.0"
isort = "^6.0.1"
pylint = "^3.3.8"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pylint.main]
load-plugins = []
jobs = 1

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
    "W0613",  # unused-argument
    "C0115",  # missing-class-docstring
    "C0301",  # line-too-long (handled by black)
    "W1203",  # logging-fstring-interpolation
    "W0611",  # unused-import
    "C0415",  # import-outside-toplevel
    "W0718",  # broad-exception-caught
    "R0911",  # too-many-return-statements
    "R0801",  # duplicate-code
    "E1101",  # no-member (often false positives with SQLAlchemy)
    "W0621",  # redefined-outer-name
    "C0305",  # trailing-newlines
    "R1705",  # no-else-return
    "W0237",  # arguments-renamed
    "W0707",  # raise-missing-from
    "R0913",  # too-many-arguments
    "R0917",  # too-many-positional-arguments
    "W0404",  # reimported
    "R0914",  # too-many-locals
    "R0915",  # too-many-statements
    "W0612",  # unused-variable
    "W0622",  # redefined-builtin
    "W0221",  # arguments-differ
    "C0103",  # invalid-name (for constants and naming styles)
    "W0719",  # broad-exception-raised
]

[tool.pylint.format]
max-line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"