# backend/pyproject.toml

[tool.poetry]
name = "familycart-backend"
version = "0.1.0"
description = "Backend for the FamilyCart application"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app", from = "."}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.14"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9" # For synchronous Alembic operations if needed, or use asyncpg for async
asyncpg = "^0.29.0" # For FastAPI async database operations
pydantic = {extras = ["email"], version = "^2.7.1"}
pydantic-settings = "^2.2.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9" # For FastAPI file uploads, if needed
tenacity = "^8.2.3" # For retry mechanisms, e.g. DB connection
# For WebSocket support
websockets = "^12.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
python-dotenv = "^1.0.1"
openai = "^1.30.1"
google-generativeai = "^0.5.4"
redis = {extras = ["hiredis"], version = "^5.0.4"}
pytest = "^8.4.1"
ollama = "^0.5.1"
httpx = "^0.28.1"
requests = "^2.32.4"
aiohttp = "^3.12.13"
prometheus-client = "^0.19.0"
prometheus-fastapi-instrumentator = "^7.0.0"
psutil = "^6.1.1"
# Email service dependencies
aiosmtplib = "^3.0.0"
email-validator = "^2.1.0"
jinja2 = "^3.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^0.23.8"
black = "^24.10.0"
isort = "^6.0.1"
pylint = "^3.3.8"
pytest-cov = "^7.0.0"
bandit = "^1.8.6"

[tool.pytest.ini_options]
testpaths = ["app/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pylint.main]
load-plugins = []
jobs = 1

[tool.pylint.messages_control]
disable = [
    # Documentation - acceptable for rapid development
    "C0114",  # missing-module-docstring
    "C0116",  # missing-function-docstring  
    "C0115",  # missing-class-docstring
    
    # Formatting handled by Black
    "C0301",  # line-too-long (handled by black)
    "C0305",  # trailing-newlines
    
    # SQLAlchemy ORM false positives
    "E1101",  # no-member (often false positives with SQLAlchemy)
    
    # Test-related acceptable patterns
    "W0621",  # redefined-outer-name (pytest fixtures)
    "W0613",  # unused-argument (pytest fixtures)
    "R0801",  # duplicate-code (test fixtures and data setup)
    
    # FastAPI/Pydantic specific patterns
    "R0903",  # too-few-public-methods (Pydantic models)
    "W0718",  # broad-exception-caught (API error handling)
    "C0415",  # import-outside-toplevel (FastAPI dependency injection)
    
    # Complex business logic - acceptable for domain complexity
    "R0913",  # too-many-arguments (complex domain functions)
    "R0914",  # too-many-locals (complex business operations)
    "R0915",  # too-many-statements (complex business operations)
    "R0917",  # too-many-positional-arguments (domain complexity)
    
    # Configuration conventions
    "C0103",  # invalid-name (for framework constants and config)
    "W0622",  # redefined-builtin (id parameters in APIs)
]

# Set higher thresholds for complexity that we DO want to track
[tool.pylint.design]
max-args = 8           # Allow up to 8 arguments (was 5)
max-locals = 20        # Allow up to 20 locals (was 15)  
max-returns = 8        # Allow up to 8 returns (was 6)
max-statements = 75    # Allow up to 75 statements (was 50)

[tool.pylint.format]
max-line-length = 88

[tool.bandit]
# Exclude test directories for appropriate test-specific patterns
exclude_dirs = ["tests"]
# Only skip genuinely necessary patterns:
# B101: assert_used (legitimate in tests)
# B104: hardcoded_bind_all_interfaces (legitimate for containers)
# B105/B106: hardcoded_password_* (legitimate for test fixtures only)
skips = ["B101", "B104", "B105", "B106"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"